--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-Hey this is a new page!
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>About Me</title>
+    <link rel="stylesheet" href="resources/layout.css" type="text/css">
+    <script src="resources/javascript.js" type="text/javascript" charset="utf-8"></script>
+  </head>
+  <body>
+
+    <div id="header" class="content">
+      <h1>About Me</h1>
+      <p>
+        My name is Tyler Danke and I'm Lead Link at Purely Poultry.
+      </p>
+    </div>
+<img src="resources/common-eider-ducks_08.JPG">
+    <div class="content clearfix">
+      <!-- Page Navigation -->
+      <div id="nav">
+        <h2>Contents</h2>
+
+        <ul>
+          <li><a href='#projects'>Projects</a></li>
+          <li><a href='#hobbies'>Hobbies</a></li>
+          <li><a href='#fun-facts'>Fun Facts</a></li>
+        </ul>
+      </div>
+
+      <!-- Main content area -->
+      <div id="main">
+        <h2 id="projects">Projects</h2>
+        <p>I like to work on <a href="http://www.holacracy.org/">holacracy</a> and am excited about implementing Holacracy in my organization.</p>
+
+        <h3>Project #1 Holacracy Implementation</h3>
+        <p>Project #1 Description is a totally different operating system.</p>
+
+        <h3>Project #2 Glass Frog Adoption?</h3>
+        <p>Project #2 Description. We need to upload our roles to Glass Frog.</p>
+
+        <h2 id="hobbies">Hobbies</h2>
+
+        <p>What else do you do in your spare time?</p>
+
+        <h3>Item #1 Title</h3>
+        <p>Use this paragraph to explain Item #1</p>
+        <ul>
+          <li>Cool thing I did</li>
+          <li>Another cool thing I did</li>
+          <li>Final cool thing I did</li>
+        </ul>
+
+        <h3>Item #1 Title</h3>
+        <p>Use this paragraph to explain Item #1</p>
+        <ul>
+          <li>Cool thing I did</li>
+          <li>Another cool thing I did</li>
+          <li>Final cool thing I did</li>
+        </ul>
+
+        <h2 id="fun-facts">Fun Facts</h2>
+        <h3>Subhead</h3>
+        <p>Use this list to tell us some fun things about yourself.</p>
+        <ul>
+          <li>Cool thing I did</li>
+          <li>Another cool thing I did</li>
+          <li>Final cool thing I did</li>
+        </ul>
+
+
+      </div>
+    </div>
+
+    <div id="copyright" class="content">
+      &copy; 2012 Tyler Danke, All Rights Reserved.
+    </div>
+  </body>
+</html>
