change file extension

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         My name is Tyler Danke and I'm Lead Link at Purely Poultry.
       </p>
     </div>
-<img src="resources/common-eider-ducks_08.JPG">
+<img src="resources/common-eider-ducks_08.jpg">
     <div class="content clearfix">
       <!-- Page Navigation -->
       <div id="nav">
