--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
 
       <!-- Main content area -->
-      <div id="main">
+      <div class="main">
         <h2 id="projects">Projects</h2>
         <p>I like to work on <a href="http://www.holacracy.org/">holacracy</a> and am excited about implementing Holacracy in my organization.</p>
 
