--- a/hello.html
+++ b/hello.html
@@ -31,5 +31,13 @@
   <li>Programming</li>
 </ul>
 <p>I hear RailsBridge needs volunteers, should I volunteer!?!</p>
+<script type="text/javascript">
+function replaceName() {
+  var myNewName = window.prompt('Pick a new name!');
+  document.getElementById('user-name').innerHTML = myNewName;
+}
+
+document.onclick = replaceName;
+</script>
 </body>
 </html>
